--- a/client/src/main/ts/app/app.component.html
+++ b/client/src/main/ts/app/app.component.html
@@ -1,14 +1,7 @@
 <main>
   <h1>Click on Fluttershy</h1>
 
-    <script>
-        function say()
-        {
-            alert("Yay!")
-        }
-    </script>
-
-    <div onclick="say()">
+    <div (click)="say()">
         <img src="../assets/images/Fluttershy.png" width="50%" height="50%">
     </div>
 
