--- a/client/src/main/ts/app/mainpic.component.html
+++ b/client/src/main/ts/app/mainpic.component.html
@@ -1,5 +1,5 @@
 <main>
 
     <img id="my_image" [src] = "urlImage" width="50%" height="50%">
-
+    <img id="dress" src="../assets/images/Fluttershy.png">
 </main>
