--- a/client/src/main/ts/app/mainpic.component.html
+++ b/client/src/main/ts/app/mainpic.component.html
@@ -1,5 +1,8 @@
 <main>
 
+    <div class="doll_container">
     <img id="my_image" [src] = "urlImage" width="50%" height="50%">
+    <img id="top" src="../assets/images/Fluttershy.png">
     <img id="dress" src="../assets/images/Fluttershy.png">
+    </div>
 </main>
