--- a/client/src/main/ts/app/app.component.html
+++ b/client/src/main/ts/app/app.component.html
@@ -5,7 +5,7 @@
         <td valign="top">
             <main-pic></main-pic>
         </td>
-        <td valign="top">
+        <td align="right" valign="top">
             <wallpaper-listing></wallpaper-listing>
         </td>
     </table>
