--- a/client/src/main/ts/app/app.component.html
+++ b/client/src/main/ts/app/app.component.html
@@ -1,14 +1,15 @@
 <main>
-  <h1>Click on Fluttershy</h1>
+    <h1>Click on Fluttershy</h1>
+
+    <room></room>
 
     <table>
-        <td valign="top">
+        <td valign="top" width="60%">
             <main-pic></main-pic>
         </td>
-        <td align="right" valign="top">
+        <td align="right" valign="top" width="40%">
             <wallpaper-listing></wallpaper-listing>
         </td>
     </table>
-
 
 </main>
