--- a/client/src/main/ts/app/mainpic.component.html
+++ b/client/src/main/ts/app/mainpic.component.html
@@ -1,9 +1,9 @@
-<main>
+<main style = "z-index:1;">
 
     <div class="doll_container">
-    <img id="my_image" src = "../assets/images/dolls/doll_osnova.png" width="50%" height="50%">
     <img id="top" [src] = "urlImage">
     <img id="dress" src="../assets/images/cloth/dresses/2.png">
     <img id="bottom" src="../assets/images/cloth/niz/42.png">
+    <img id="my_image" src = "../assets/images/dolls/doll_osnova.png" width="50%" height="50%">
     </div>
 </main>
