--- a/client/src/main/ts/app/wallpaperlisting.component.html
+++ b/client/src/main/ts/app/wallpaperlisting.component.html
@@ -1,4 +1,4 @@
-<main>
+<main style="z-index:2; position: absolute">
     <button (click)="setType('dress')">Dress</button>
     <button (click)="setType('top')">Top</button>
     <button (click)="setType('bottom')">Bottom</button>
