draggable object + main menu

--- a/client/src/main/ts/app/app.component.html
+++ b/client/src/main/ts/app/app.component.html
@@ -2,9 +2,10 @@
     <h1>Click on Fluttershy</h1>
 
     <room></room>
-
+    <mainmenu></mainmenu>
     <table>
         <td valign="top" width="60%">
+            <mainmenu></mainmenu>
             <main-pic></main-pic>
         </td>
         <td align="right" valign="top" width="40%">
