--- a/client/src/main/ts/app/wallpaperlisting.component.html
+++ b/client/src/main/ts/app/wallpaperlisting.component.html
@@ -1,4 +1,4 @@
-<main style="z-index:2; position: absolute">
+<main style="-moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; user-select: none; z-index:2; position: absolute; left: 50%; top: 0px;">
     <button (click)="setType('dress')">Dress</button>
     <button (click)="setType('top')">Top</button>
     <button (click)="setType('bottom')">Bottom</button>
@@ -7,7 +7,7 @@
         <br>
         <div class="image-container" *ngFor="let wallpaper of wallpaperListing.wallpapers">
 
-            <div (click)="open(wallpaper.url)" class="actions">
+            <div (click)="open(wallpaper.url)">
                 <img src="{{wallpaper.url}}" class="image-item" width="20%" height="20%"/>
             </div>
         </div>
