--- a/client/src/main/ts/app/furniture.component.html
+++ b/client/src/main/ts/app/furniture.component.html
@@ -1,3 +1,4 @@
 <div (mousemove)="onMouseMove($event)" (mouseup)="onMouseUp($event)" style="position: absolute; z-index: 7; left:0px; top:0px; width: 100%; height: 100%;">
-    <div style="position: absolute; top:0px; width:50px; height: 50px; background-color: aqua" (mousedown)="onMouseDown($event)"></div>
+
+    <div id="dragFurn"  (mousedown)="onMouseDown($event)"></div>
 </div>
