--- a/client/src/main/ts/app/room.component.html
+++ b/client/src/main/ts/app/room.component.html
@@ -1,6 +1,7 @@
 <main style="position: absolute; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; user-select: none; width: 100%; height: 100%; top:0px; left: 0px; z-index:0;">
 
-    <furniture></furniture>
+
+    <furniture [urlImage]="'./client/src/main/ts/assets/images/furniture/divan.jpg'"></furniture>
 
     <div style="position: absolute; background-color: aliceblue; width: 100%; height: 2%; top:60%"></div>
     <img id="wallpapers" style=" background-color: aliceblue; width: 100%; height: 60%" src = "../assets/images/room/wallpapers/1.png">
