img instead of div to make moving faster

--- a/client/src/main/ts/app/furniture.component.html
+++ b/client/src/main/ts/app/furniture.component.html
@@ -1,5 +1,4 @@
 <div (mousemove)="onMouseMove($event)" (mouseup)="onMouseUp($event)">
 
-    <div [id]="index" style="position: absolute; z-index: 7; left:0px; top:0px; width: 491px; height: 198px;" (mousedown)="onMouseDown($event)"></div>
-   <!-- <img [id]="index" src="../assets/images/furniture/divan.jpg" draggable = false (mousedown)="onMouseDown($event)"> -->
+   <img [id]="index" src="../assets/images/furniture/divan.jpg" draggable = false (mousedown)="onMouseDown($event)">
 </div>
