--- a/client/src/main/ts/app/furniture.component.html
+++ b/client/src/main/ts/app/furniture.component.html
@@ -1,4 +1,4 @@
 <div (mousemove)="onMouseMove($event)" (mouseup)="onMouseUp($event)">
 
-   <img [id]="index" src="../assets/images/furniture/divan.jpg" draggable = false (mousedown)="onMouseDown($event)">
+   <img [id]="index" [src]="urlImage" draggable = false (mousedown)="onMouseDown($event)">
 </div>
