--- a/client/src/main/ts/app/mainmenu.component.html
+++ b/client/src/main/ts/app/mainmenu.component.html
@@ -1,5 +1,5 @@
-<div style = "top:0px; left:20%; position:absolute; z-index:0; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; user-select: none;">
+<div style = "top:0px; left:40%; position:absolute; z-index:0; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; user-select: none;">
 
-<button (click) = "hideDoll()">Change Room</button>
-<button (click) = "showDoll()">Change Doll</button>
+<button class="button" (click) = "hideDoll()">Change Room</button>
+<button class="button" (click) = "showDoll()">Change Doll</button>
     </div>
