--- a/client/src/main/ts/app/room.component.html
+++ b/client/src/main/ts/app/room.component.html
@@ -1,12 +1,11 @@
 <main style="position: absolute; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none; user-select: none; width: 100%; height: 100%; top:0px; left: 0px; z-index:0;">
 
 
-    <furniture [index]= "'dragFurn1'" [top]= "'0px'" [left]= "'0px'" [width]="'491px'" [height] = "'198px'" [urlImage]="'./client/src/main/ts/assets/images/furniture/divan.jpg'"></furniture>
-    <furniture [index]= "'dragFurn2'" [top]= "'600px'" [left]= "'30px'" [width]="'344px'" [height] = "'139px'" [urlImage]="'./client/src/main/ts/assets/images/furniture/divan2.jpg'"></furniture>
-    <furniture [index]= "'dragFurn3'" [top]= "'100px'" [left]= "'500px'" [width]="'491px'" [height] = "'198px'" [urlImage]="'./client/src/main/ts/assets/images/furniture/divan.jpg'"></furniture>
+    <furniture [index]= "'dragFurn1'" [top]= "'100px'" [left]= "'400px'" [width]="'480px'" [height] = "'423px'" [urlImage]="'./client/src/main/ts/assets/images/furniture/bed.png'" style="position: absolute;"></furniture>
+    <furniture [index]= "'dragFurn2'" [top]= "'200px'" [left]= "'0px'" [width]="'372px'" [height] = "'280px'" [urlImage]="'./client/src/main/ts/assets/images/furniture/commode.png'" style="position: absolute;"></furniture>
+    <furniture [index]= "'dragFurn3'" [top]= "'40px'" [left]= "'900px'" [width]="'189px'" [height] = "'413px'" [urlImage]="'./client/src/main/ts/assets/images/furniture/wardrobe.png'" style="position: absolute;"></furniture>
 
-    <div style="position: absolute; background-color: aliceblue; width: 100%; height: 2%; top:60%"></div>
-    <img id="wallpapers" style=" background-color: aliceblue; width: 100%; height: 60%" src = "../assets/images/room/wallpapers/1.png">
-    <img id="floor" style=" background-color: aliceblue; width: 100%; height: 40%; top: 50%" src = "../assets/images/room/floor/1.png">
+    <img id="wallpapers" style="width: 1635px; height: 365px" src = "../assets/images/room/wallpapers/wallpaper4.jpg">
+    <img id="floor" style="width: 1635px; height: 365px; top: 50%" src = "../assets/images/room/floor/parquet5.jpg">
 
 </main>
